# djancommerce

./: .gitignore  LICENSE  Pipfile  README.md  manage.py  requirements.txt  setup.cfg
.github/: CONTRIBUTING.md
.github/workflows/: codecov.yml  django.yml
djancommerce/: admin.py  apps.py  asgi.py  forms.py  models.py  settings.py  slugger.py  urls.py  views.py  wsgi.py
djancommerce/migrations/: 0001_initial.py  0002_auto_20210808_0625.py  0003_cart_cartitem.py  0004_order_orderitem.py  0005_alter_cart_user.py  0006_alter_cart_user.py  0007_cartitem_prod_id.py  0008_auto_20210811_0649.py
templates/: signup.html
templates/registration/: login.html
users/: admin.py  forms.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py
