[metadata]
name = djancommerce
version = 0.0.1
author = Ulugbek Muslitdinov
author_email = ulugbekmuslitdinov@gmail.com
description = Django package for fast e-commerce application
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = djancommerce
packages = find:
python_requires = >=3.8
install_requires =
    django
    pillow

[options.packages.find]
where = src